# llama-bridge

./: .claudeignore  .gitignore  INSTRUCTION.md  LICENSE  Makefile  README.md  check_signature.py  fix_report.txt  pyproject.toml  reproduce_issue.py  run_final.sh  run_optimized.sh  start.sh  test_advanced.py  test_repro_minimax.py
bindings/: CMakeLists.txt  llama_chat_wrapper.cpp
configs/: deepseek-v3.2.toml  glm4-flash.toml  glm4-moe.toml  glm4-reap.toml  gpt-oss-120b.toml  mimo-v2.toml  minimax-m2.1.toml  qwen2.5-3b.toml  qwen30b-coder.toml
scripts/: benchmark.py  start_optimized.sh
src/: __init__.py  bridge.py  cli.py  config.py  exceptions.py  litellm_adapter.py  server.py
src/adapters/: anthropic.py  base.py  openai.py
src/bridge/: __init__.py  anthropic.py  base.py  flavors.py  openai.py  scanner.py
src/bridge/flavors/: __init__.py  base.py  definitions.py  factory.py  protocols.py  templates.py
src/tests/: conftest.py
src/tests/e2e/: test_api_server.py  test_claude_integration.py
src/tests/e2e/cli/: test_lenient_mode.py
src/tests/integration/: test_bridge_flow.py  test_llama_server_parity.py
src/tests/integration/features/: test_structured_output.py  test_system_prompt.py
src/tests/performance/: benchmark_concurrency.py
src/tests/unit/: test_bridge_prefill.py  test_bridge_prefill_implicit.py  test_bridge_streaming.py  test_minimax_integration.py  test_minimax_template.py  test_parser.py  test_stream_scanner.py  test_wrapper_behavior.py  test_wrapper_direct.py
src/tests/unit/adapters/: test_anthropic_adapter.py  test_openai_adapter.py
src/tests/unit/bridge/: test_flavors.py
src/utils/: benchmark.py  debug_signature.py  evaluate.py  optimize.py  replay_request.py  scanner.py
tests/: conftest.py  manual_test_qwen.py  test_scanner_robustness.py
tests/e2e/: test_basic.py  test_cli_lenient.py
tests/integration/: test_structured_content.py  test_system_prompt_check.py
tests/integration/error_handling/: test_overflow.py
tests/integration/features/: test_multi_context.py
tests/unit/: test_adapters.py  test_litellm_adapter.py  test_qwen_parser.py  test_server.py
tests/unit/core/: test_config.py  test_env.py  test_model_resolution.py
