[project]
name = "llama-bridge"
version = "0.1.0"
description = "GGUF Model Inference with Universal API Support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "litellm>=1.30.0",
    "pybind11>=2.11.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.28.0",
    "black>=24.0.0",
    "nodeenv>=1.8.0",
    "pexpect>=4.9.0",
    "requests>=2.31.0",
]

[project.scripts]
serve = "src.server:main"
cc = "src.cli:run_claude_code"
hfd = "src.cli:download_model"
build = "src.cli:build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
